# SkillOpt

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/alfworld/: README.md  config.yaml  initial_skill.md  tasks.yaml
benchmarks/office_qa/: README.md  config.kimi.yaml  config.yaml  initial_skill.md  tasks.yaml
benchmarks/spreadsheet/: README.md  config.baselines.yaml  config.claude.yaml  config.kimi.run.yaml  config.kimi.yaml  config.kimi_code.yaml  config.official.full.kimi_code.yaml  config.official.kimi.r2.yaml  config.official.kimi.yaml  config.official.kimi_code.yaml  config.official.yaml  config.yaml  initial_skill.md  initial_skill_official.md  tasks.yaml  tasks_official_sample.yaml
benchmarks/spreadsheet/_base/: baselines-external.yaml  claude-harness.yaml  kimi-code-harness.yaml  kimi-models.yaml  mock-dataset.yaml  official-dataset.yaml  optimization-fast.yaml  optimization-paper.yaml
benchmarks/spreadsheet/profiles/: mock-baselines.yaml  mock-claude-code.yaml  mock-kimi-api.yaml  mock-kimi-code.yaml  mock-spreadsheet.yaml  official-kimi-api.yaml  (+4 more)
docs/: PAPER_ALIGNMENT.md  PRODUCT.md
examples/demo_qa/: config.kimi.yaml  config.paper.yaml  config.yaml  initial_skill.md  tasks.yaml
scripts/: download_spreadsheetbench.sh  install_kimi_cli.sh  run_spreadsheetbench_full.sh
src/skillopt/: __init__.py  cli.py  config.py  runner.py
tests/: test_alfworld_harness.py  test_core.py  test_kimi_code_harness.py  test_paper_alignment.py  test_platform.py  test_spreadsheet_harness.py  test_spreadsheetbench_adapter.py
(+28 files in other folders)
