[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillopt"
version = "1.0.0"
description = "Text-space optimizer for agent skills — train compact skill documents without modifying model weights"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "SkillOpt Team" }]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
anthropic = ["anthropic>=0.40"]
spreadsheet = ["openpyxl>=3.1"]
all = ["skillopt[dev,web,anthropic,spreadsheet]"]

[project.scripts]
skillopt = "skillopt.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skillopt"]

[tool.hatch.build.targets.wheel.force-include]
"src/skillopt/web/static" = "skillopt/web/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
